<resources>

    <!-- //////////////////////////////////////////////////////////// KEYS //////////////////////////////////////////////////////////// -->

    <string name="app_name">AEFRH</string>
    <string name="federation_name">Asociación Española de Fiestas y Recreaciones Históricas</string>
    <string name="shareMessage">¡Hola! Descarga gratis la aplicación de la Asociación Española de Fiestas y Recreaciones Históricas a través del siguiente link: %1$s</string>

    <string name="AEFRH">AEFRH</string>
    <string name="CEFMH">CEFMH</string>

    <!-- //////////////////////////////////////////////////////////// ERROR //////////////////////////////////////////////////////////// -->

    <!--ERRORES TIPO-->
    <string name="error1">¡Ups! Algo ha ido mal.</string>
    <string name="error2">Lo siento, algo ha fallado. Inténtalo de nuevo más tarde.</string>
    <string name="error3">¡Atención!</string>

    <string name="sorryError">Lo siento, ha habido un error. Inténtelo de nuevo.</string>
    <string name="mustUpdate">Hay una nueva actualización, entra en el Play Store para actualizarla.</string>

    <!--ERRORES SPLASH-->
    <string name="errorMaintenance">Servidor en mantenimiento. Prueba de nuevo más tarde.</string>
    <string name="errorBlocked">Lo siento, parece que tu cuenta no está activa. Ponte en contacto con el administrador.</string>
    <string name="errorUpdate">Esta versión está desactualizada, entra en Google Play y actualiza.</string>
    <string name="errorInternet">Ups… No tienes conexión a internet, vuelve cuando te hayas conectado.</string>

    <!-- //////////////////////////////////////////////////////////// GENERAL //////////////////////////////////////////////////////////// -->

    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">Aceptar</string>
    <string name="noThanks">No, gracias</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="finish">Terminar</string>
    <string name="messageLoading">Un segundo…</string>
    <string name="compartir">Compartir</string>
    <string name="save">Guardar</string>


    <!-- //////////////////////////////////////////////////////////// ACTIVITIES //////////////////////////////////////////////////////////// -->

    <!--NAVIGATION-->
    <string name="noticias">Noticias</string>
    <string name="calendario">Calendario</string>
    <string name="mapa">Mapa</string>
    <string name="taxiMagazine">Taxi Magazine</string>
    <string name="multimedia">Multimedia</string>

    <string name="quienSomos">Quiénes somos</string>
    <string name="contacto">Contacto</string>
    <string name="version">Versión %s</string>

    <!--EPOCAS-->
    <string name="epocas">Épocas</string>

    <!--FIESTAS-->
    <string name="fiestas">Fiestas</string>
    <string name="historia">Historia</string>
    <string name="title_activity_maps">Map</string>

    <!--INFORMACION-->
    <string name="informacion">Detalle de la Fiesta</string>

    <string name="denominacion">Denominación de la fiesta o recreación</string>
    <string name="ano">Año o Siglo representado</string>
    <string name="epoca">Época</string>
    <string name="localidad">Localidad</string>
    <string name="organizacion">Organización</string>
    <string name="fecha">Fecha celebración</string>

    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="web">Web</string>

    <!--MAPS-->
    <string name="verFiesta">Ver fiesta</string>
    <string name="filtrar">Filtrar</string>
    <string name="info">Información</string>

    <!--MULTIMEDIA-->
    <string name="verVideo">Vídeo promocional</string>
    <string name="verAudioVisual">Audio Visual</string>
    <string name="verRevista">Ver revista de la Asociación Española de Fiestas y Recreaciones Históricas.</string>
    <string name="reproducir">Reproducir</string>
    <string name="ir">Ir a revista</string>
    <string name="video_player">Video Player</string>

    <!--POP UP FILTAR-->
    <string name="seleccionaEpoca">Selecciona la época</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>

    <!--CONTACTO-->
    <string name="contact">Contáctanos</string>
    <string name="siguenos">Síguenos en Redes Sociales</string>
    <string name="rrss">Redes Sociales</string>
    <string name="emailContact">Email de contacto</string>
    <string name="presidencia">Presidencia</string>

    <!--IMAGE-->
    <string name="image">Fotografías</string>
    <string name="contact_by_email">Contáctanos por correo electrónico</string>

    <!-- URL -->
    <string name="spain_url">https://www.fiestashistoricas.es/</string>
    <string name="europe_url">http://www.cefmh.eu/</string>
    <string name="no_email_instalado">Lo siento, no hay gestores de correo instalados.</string>

    <!-- NOTICIAS -->
    <string name="dateFormat">Publicado el %s</string>
    <string name="noticia">Noticia</string>

</resources>