<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>

        <item
            android:id="@+id/nav_news"
            android:title="@string/noticias" />

        <item
            android:id="@+id/nav_map"
            android:title="@string/mapa" />

        <item
            android:id="@+id/nav_us"
            android:title="@string/quienSomos" />

        <item
            android:id="@+id/nav_contact"
            android:title="@string/contact" />

        <item
            android:id="@+id/nav_multimedia"
            android:title="@string/multimedia" />

        <item
            android:id="@+id/nav_magazine"
            android:title="@string/taxiMagazine" />

    </group>

</menu>