<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragmentEpocas">

    <fragment
        android:id="@+id/fragmentEpocas"
        android:name="aefrh.es.aefrh.presentation.epocas.FragmentEpocas"
        android:label="@string/epocas"
        tools:layout="@layout/fragment_epocas" >
        <action
            android:id="@+id/action_fragmentEpocas_to_fragmentFiesta"
            app:destination="@id/fragmentFiesta"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/fragmentFiesta"
        android:name="aefrh.es.aefrh.presentation.fiestas.FragmentFiestas"
        android:label="@string/fiestas"
        tools:layout="@layout/fragment_fiesta" >
        <argument
            android:name="FIESTA_ID"
            app:argType="string" />
        <action
            android:id="@+id/action_fragmentFiesta_to_fragmentFiestaDetails"
            app:destination="@id/fragmentFiestaDetails"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/fragmentFiestaDetails"
        android:name="aefrh.es.aefrh.presentation.fiestas.FragmentFiestaDetails"
        android:label="@string/historia"
        tools:layout="@layout/fragment_fiesta_details">
        <argument
            android:name="FIESTA_ID"
            app:argType="string" />
    </fragment>

</navigation>